# trigonometry-equation

./: CMakeLists.txt  Dockerfile  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure.ac  configure~  docker-build.yml  func.cpp  func.h  http_server  http_server.cpp  main.cpp  my_program  nginx.conf  scriptA.sh  scriptB.sh  test  test.cpp  test_server  test_server.cpp
.github/workflows/: docker-build.yml
autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
debian/: autoreconf.after  autoreconf.before  changelog  control  files  rules
debian/.debhelper/trigonometry-equation/: dbgsym-build-ids
debian/.debhelper/trigonometry-equation/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/trigonometry-equation/dbgsym-root/usr/share/doc/: trigonometry-equation-dbgsym
debian/trigonometry-equation/DEBIAN/: control  md5sums
github/workflows/: ci.yml
